tests/baselines/reference/objectTypeWithRecursiveWrappedPropertyCheckedNominally.errors.txt
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts(19,1): error TS2321: Excessive stack depth comparing types 'MyList<number>' and 'List<number>'.
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts(19,1): error TS2321: Excessive stack depth comparing types 'MyList<number>' and 'List<number>'.
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts(20,1): error TS2322: Type 'MyList<string>' is not assignable to type 'List<number>'.
  Types of property 'data' are incompatible.
    Type 'string' is not assignable to type 'number'.
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts(22,1): error TS2322: Type 'MyList<number>' is not assignable to type 'List<string>'.
  Types of property 'data' are incompatible.
    Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts(23,1): error TS2321: Excessive stack depth comparing types 'MyList<string>' and 'List<string>'.
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts(23,1): error TS2321: Excessive stack depth comparing types 'MyList<string>' and 'List<string>'.
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts(27,1): error TS2322: Type 'List<MyList<number>>' is not assignable to type 'List<List<number>>'.
  Type 'MyList<number>' is not assignable to type 'List<number>'.
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts(30,5): error TS2322: Type 'U' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'U'.
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts(31,5): error TS2322: Type 'T' is not assignable to type 'U'.
  'U' could be instantiated with an arbitrary type which could be unrelated to 'T'.
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts(31,5): error TS2321: Excessive stack depth comparing types 'T' and 'MyList<number>'.
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts(36,5): error TS2322: Type 'U' is not assignable to type 'List<number>'.
  Type 'MyList<number>' is not assignable to type 'List<number>'.
    Types of property 'next' are incompatible.
      Type 'MyList<MyList<number>>' is not assignable to type 'List<List<number>>'.
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts(37,5): error TS2321: Excessive stack depth comparing types 'T' and 'MyList<number>'.
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts(42,5): error TS2322: Type 'U' is not assignable to type 'T'.
  'U' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'MyList<number>'.
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts(48,5): error TS2322: Type 'T' is not assignable to type 'List<number>'.
  Type 'U' is not assignable to type 'List<number>'.
    Type 'MyList<number>' is not assignable to type 'List<number>'.
      Types of property 'next' are incompatible.
        Type 'MyList<MyList<number>>' is not assignable to type 'List<List<number>>'.
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts(49,5): error TS2322: Type 'U' is not assignable to type 'List<number>'.


==== tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedPropertyCheckedNominally.ts (15 errors) ====
    // Types with infinitely expanding recursive types are type checked nominally
    
    class List<T> {
        data: T;
        next: List<List<T>>;
    }
    
    class MyList<T> {
        data: T;
        next: MyList<MyList<T>>;
    }
    
    var list1 = new List<number>();
    var list2 = new List<string>();
    
    var myList1 = new MyList<number>();
    var myList2 = new MyList<string>();
    
    list1 = myList1; // error, not nominally equal
    ~~~~~
!!! error TS2321: Excessive stack depth comparing types 'MyList<number>' and 'List<number>'.
    ~~~~~~~~~~~~~~~
!!! error TS2321: Excessive stack depth comparing types 'MyList<number>' and 'List<number>'.
    list1 = myList2; // error, type mismatch
    ~~~~~
!!! error TS2322: Type 'MyList<string>' is not assignable to type 'List<number>'.
!!! error TS2322:   Types of property 'data' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    
    list2 = myList1; // error, not nominally equal
    ~~~~~
!!! error TS2322: Type 'MyList<number>' is not assignable to type 'List<string>'.
!!! error TS2322:   Types of property 'data' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
    list2 = myList2; // error, type mismatch
    ~~~~~
!!! error TS2321: Excessive stack depth comparing types 'MyList<string>' and 'List<string>'.
    ~~~~~~~~~~~~~~~
!!! error TS2321: Excessive stack depth comparing types 'MyList<string>' and 'List<string>'.
    
    var rList1 = new List<List<number>>();
    var rMyList1 = new List<MyList<number>>();
    rList1 = rMyList1; // error, not nominally equal
    ~~~~~~
!!! error TS2322: Type 'List<MyList<number>>' is not assignable to type 'List<List<number>>'.
!!! error TS2322:   Type 'MyList<number>' is not assignable to type 'List<number>'.
    
    function foo<T extends List<number>, U extends MyList<number>>(t: T, u: U) {
        t = u; // error
        ~
!!! error TS2322: Type 'U' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'U'.
        u = t; // error
        ~
!!! error TS2322: Type 'T' is not assignable to type 'U'.
!!! error TS2322:   'U' could be instantiated with an arbitrary type which could be unrelated to 'T'.
        ~~~~~
!!! error TS2321: Excessive stack depth comparing types 'T' and 'MyList<number>'.
    
        var a: List<number>;
        var b: MyList<number>;
        a = t; // ok
        a = u; // error
        ~
!!! error TS2322: Type 'U' is not assignable to type 'List<number>'.
!!! error TS2322:   Type 'MyList<number>' is not assignable to type 'List<number>'.
!!! error TS2322:     Types of property 'next' are incompatible.
!!! error TS2322:       Type 'MyList<MyList<number>>' is not assignable to type 'List<List<number>>'.
        b = t; // error
        ~
!!! error TS2321: Excessive stack depth comparing types 'T' and 'MyList<number>'.
        b = u; // ok
    }
    
    function foo2<T extends U, U extends MyList<number>>(t: T, u: U) {
        t = u; // error
        ~
!!! error TS2322: Type 'U' is not assignable to type 'T'.
!!! error TS2322:   'U' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint 'MyList<number>'.
        u = t; // was error, ok after constraint made illegal, doesn't matter
    
        var a: List<number>;
        var b: MyList<number>;
    
        a = t; // error
        ~
!!! error TS2322: Type 'T' is not assignable to type 'List<number>'.
!!! error TS2322:   Type 'U' is not assignable to type 'List<number>'.
!!! error TS2322:     Type 'MyList<number>' is not assignable to type 'List<number>'.
!!! error TS2322:       Types of property 'next' are incompatible.
!!! error TS2322:         Type 'MyList<MyList<number>>' is not assignable to type 'List<List<number>>'.
        a = u; // error
        ~
!!! error TS2322: Type 'U' is not assignable to type 'List<number>'.
        b = t; // ok
        b = u; // ok
    }